--- a/web-app/components/aboutgdsc/Body.css
+++ b/web-app/components/aboutgdsc/Body.css
@@ -1,12 +1,12 @@
 
 @font-face {
     font-family: 'Raleway';
-    src: url('../public/fonts/aboutgdsc/Raleway-Regular.ttf') format('truetype');
+    src: url('../../fonts/aboutgdsc/Raleway-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Raleway-italic';
-    src: url('../public/fonts/aboutgdsc/Raleway-Italic-VariableFont_wght.ttf') format('truetype');
+    src: url('../../fonts/aboutgdsc/Raleway-Italic-VariableFont_wght.ttf') format('truetype');
 }
 
 
