--- a/web-app/components/dino-scroll/Thugdinofront.css
+++ b/web-app/components/dino-scroll/Thugdinofront.css
@@ -1,5 +1,5 @@
 .thugdinofront{
-    background-image: url(../../public/dino-bike/thug-dino-front.png);
+    background-image: url(../../dino-bike/thug-dino-front.png);
     background-size: contain;
     width: 100px;
     background-repeat: no-repeat;
