--- a/web-app/components/spons/card.css
+++ b/web-app/components/spons/card.css
@@ -1,5 +1,5 @@
 .card1{
-    background-image: url(../../public/spons/devfolio-card.svg);
+    background-image: url(../../spons/devfolio-card.svg);
     background-size: contain;
     background-repeat: no-repeat;
    height: 70vh;
@@ -8,7 +8,7 @@
 }
 
 .card2{
-    background-image: url(../../public/spons/polygon-card.svg);
+    background-image: url(../../spons/polygon-card.svg);
     background-size: contain;
     background-repeat: no-repeat;
     height: 70vh;
@@ -17,7 +17,7 @@
 }
 
 .card3{
-    background-image: url(../../public/spons/ethindia-card.svg);
+    background-image: url(../../spons/ethindia-card.svg);
     background-size: contain;
     background-repeat: no-repeat;
     height: 70vh;
@@ -26,7 +26,7 @@
 }
 
 .inner-card1{
-    background-image: url(../../public/spons/devfolio.svg);
+    background-image: url(../../spons/devfolio.svg);
     background-size: contain;
     background-repeat: no-repeat;
    
@@ -38,7 +38,7 @@
 }
 
 .inner-card2{
-    background-image: url(../../public/spons/polygon.svg);
+    background-image: url(../../spons/polygon.svg);
     background-size: contain;
     background-repeat: no-repeat;
     height: 50vh;
@@ -47,7 +47,7 @@
 }
 
 .inner-card3{
-    background-image: url(../../public/spons/ethindia.svg);
+    background-image: url(../../spons/ethindia.svg);
     background-size: contain;
     background-repeat: no-repeat;
     height: 50vh;
