--- a/web-app/components/spons/gradient.css
+++ b/web-app/components/spons/gradient.css
@@ -1,5 +1,5 @@
 .gradient{
-    background-image: url(../../public/spons/gradient.png);
+    background-image: url(../../spons/gradient.png);
     background-size: contain;
     background-repeat: no-repeat;
     /* border: 1px solid beige; */
